antlr/JailBreakLangParser.py
# Generated from JailBreakLang.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JailBreakLangParser ( Parser ):

    grammarFileName = "JailBreakLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'WALL'", "'='", "','", "'TRAP'", "'KEY'", 
                     "'GATE'", "'GUARD'", "'{'", "'}'", "'MAP'", "'PLAYER'", 
                     "'EXIT'", "'PRINT'", "'INT'", "'BOOLEAN'", "'IF'", 
                     "'ELSE'", "'WHILE'", "'FOR'", "'IN'", "'FUN'", "'VOID'", 
                     "'USE'", "'LEFT'", "'RIGHT'", "'UP'", "'DOWN'", "'TRUE'", 
                     "'FALSE'", "'OR'", "'AND'", "'NOT'", "'RETURN'", "'=='", 
                     "'!='", "'<'", "'>'", "'('", "')'", "'*'", "'/'", "'+'", 
                     "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "RETURN", "EQUALS", "NOT_EQUALS", "LESS_THAN", 
                      "GREATER_THAN", "LPAREN", "RPAREN", "MUL", "DIV", 
                      "ADD", "SUB", "COMMENT", "ID", "RAND", "INT", "WS" ]

    RULE_start = 0
    RULE_code = 1
    RULE_objects = 2
    RULE_variables = 3
    RULE_comparison = 4
    RULE_expr = 5
    RULE_term = 6
    RULE_factor = 7
    RULE_commands = 8
    RULE_expressions = 9
    RULE_function_declaration = 10
    RULE_fun_type = 11
    RULE_var_type = 12
    RULE_fun_expressions = 13
    RULE_return = 14
    RULE_fun_commands = 15
    RULE_use_fun = 16
    RULE_guard_extra_code = 17
    RULE_guard_control = 18
    RULE_value_comparison = 19
    RULE_booleanValue = 20
    RULE_variable_value = 21
    RULE_condition = 22
    RULE_condition_product = 23

    ruleNames =  [ "start", "code", "objects", "variables", "comparison", 
                   "expr", "term", "factor", "commands", "expressions", 
                   "function_declaration", "fun_type", "var_type", "fun_expressions", 
                   "return", "fun_commands", "use_fun", "guard_extra_code", 
                   "guard_control", "value_comparison", "booleanValue", 
                   "variable_value", "condition", "condition_product" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    RETURN=33
    EQUALS=34
    NOT_EQUALS=35
    LESS_THAN=36
    GREATER_THAN=37
    LPAREN=38
    RPAREN=39
    MUL=40
    DIV=41
    ADD=42
    SUB=43
    COMMENT=44
    ID=45
    RAND=46
    INT=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JailBreakLangParser.EOF, 0)

        def code(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.CodeContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.CodeContext,i)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = JailBreakLangParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.code()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 35184385588466) != 0)):
                    break

            self.state = 53
            self.match(JailBreakLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objects(self):
            return self.getTypedRuleContext(JailBreakLangParser.ObjectsContext,0)


        def commands(self):
            return self.getTypedRuleContext(JailBreakLangParser.CommandsContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(JailBreakLangParser.Function_declarationContext,0)


        def variables(self):
            return self.getTypedRuleContext(JailBreakLangParser.VariablesContext,0)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = JailBreakLangParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.objects()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.commands()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.function_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.variables()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.ExprContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.ID)
            else:
                return self.getToken(JailBreakLangParser.ID, i)

        def RAND(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.RAND)
            else:
                return self.getToken(JailBreakLangParser.RAND, i)

        def guard_extra_code(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.Guard_extra_codeContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.Guard_extra_codeContext,i)


        def LPAREN(self):
            return self.getToken(JailBreakLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JailBreakLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_objects

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjects" ):
                listener.enterObjects(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjects" ):
                listener.exitObjects(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjects" ):
                return visitor.visitObjects(self)
            else:
                return visitor.visitChildren(self)




    def objects(self):

        localctx = JailBreakLangParser.ObjectsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_objects)
        self._la = 0 # Token type
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(JailBreakLangParser.T__0)
                self.state = 62
                self.match(JailBreakLangParser.T__1)
                self.state = 66
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 63
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 64
                    self.match(JailBreakLangParser.ID)
                    pass

                elif la_ == 3:
                    self.state = 65
                    self.match(JailBreakLangParser.RAND)
                    pass


                self.state = 68
                self.match(JailBreakLangParser.T__2)
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 69
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 70
                    self.match(JailBreakLangParser.ID)
                    pass

                elif la_ == 3:
                    self.state = 71
                    self.match(JailBreakLangParser.RAND)
                    pass


                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(JailBreakLangParser.T__3)
                self.state = 75
                self.match(JailBreakLangParser.T__1)
                self.state = 79
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 77
                    self.match(JailBreakLangParser.ID)
                    pass

                elif la_ == 3:
                    self.state = 78
                    self.match(JailBreakLangParser.RAND)
                    pass


                self.state = 81
                self.match(JailBreakLangParser.T__2)
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 82
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 83
                    self.match(JailBreakLangParser.ID)
                    pass

                elif la_ == 3:
                    self.state = 84
                    self.match(JailBreakLangParser.RAND)
                    pass


                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.match(JailBreakLangParser.T__4)
                self.state = 88
                self.match(JailBreakLangParser.T__1)
                self.state = 91
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 90
                    self.match(JailBreakLangParser.ID)
                    pass


                self.state = 93
                self.match(JailBreakLangParser.T__2)
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 95
                    self.match(JailBreakLangParser.ID)
                    pass


                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(JailBreakLangParser.T__5)
                self.state = 99
                self.match(JailBreakLangParser.T__1)
                self.state = 102
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 100
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 101
                    self.match(JailBreakLangParser.ID)
                    pass


                self.state = 104
                self.match(JailBreakLangParser.T__2)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 106
                    self.match(JailBreakLangParser.ID)
                    pass


                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.match(JailBreakLangParser.T__6)
                self.state = 110
                self.match(JailBreakLangParser.T__1)
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 111
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 112
                    self.match(JailBreakLangParser.ID)
                    pass


                self.state = 115
                self.match(JailBreakLangParser.T__2)
                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 117
                    self.match(JailBreakLangParser.ID)
                    pass


                self.state = 120
                self.match(JailBreakLangParser.T__2)
                self.state = 121
                self.expr()
                self.state = 122
                self.match(JailBreakLangParser.T__7)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 260898816) != 0):
                    self.state = 123
                    self.guard_extra_code()
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 129
                self.match(JailBreakLangParser.T__8)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.match(JailBreakLangParser.T__9)
                self.state = 132
                self.match(JailBreakLangParser.T__1)
                self.state = 133
                self.expr()
                self.state = 134
                self.match(JailBreakLangParser.T__2)
                self.state = 135
                self.expr()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 7)
                self.state = 137
                self.match(JailBreakLangParser.T__10)
                self.state = 138
                self.match(JailBreakLangParser.T__1)
                self.state = 139
                self.expr()
                self.state = 140
                self.match(JailBreakLangParser.T__2)
                self.state = 141
                self.expr()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 8)
                self.state = 143
                self.match(JailBreakLangParser.T__11)
                self.state = 144
                self.match(JailBreakLangParser.T__1)
                self.state = 145
                self.expr()
                self.state = 146
                self.match(JailBreakLangParser.T__2)
                self.state = 147
                self.expr()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 9)
                self.state = 149
                self.match(JailBreakLangParser.T__12)
                self.state = 150
                self.match(JailBreakLangParser.LPAREN)
                self.state = 151
                self.expr()
                self.state = 152
                self.match(JailBreakLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JailBreakLangParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(JailBreakLangParser.ExprContext,0)


        def condition(self):
            return self.getTypedRuleContext(JailBreakLangParser.ConditionContext,0)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = JailBreakLangParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(JailBreakLangParser.T__13)
                self.state = 157
                self.match(JailBreakLangParser.ID)
                self.state = 158
                self.match(JailBreakLangParser.T__1)
                self.state = 159
                self.expr()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(JailBreakLangParser.ID)
                self.state = 161
                self.match(JailBreakLangParser.T__1)
                self.state = 162
                self.expr()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(JailBreakLangParser.T__14)
                self.state = 164
                self.match(JailBreakLangParser.ID)
                self.state = 165
                self.match(JailBreakLangParser.T__1)
                self.state = 166
                self.condition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.ExprContext,i)


        def EQUALS(self):
            return self.getToken(JailBreakLangParser.EQUALS, 0)

        def NOT_EQUALS(self):
            return self.getToken(JailBreakLangParser.NOT_EQUALS, 0)

        def LESS_THAN(self):
            return self.getToken(JailBreakLangParser.LESS_THAN, 0)

        def GREATER_THAN(self):
            return self.getToken(JailBreakLangParser.GREATER_THAN, 0)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = JailBreakLangParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.expr()
            self.state = 170
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 257698037760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 171
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.TermContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.TermContext,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.ADD)
            else:
                return self.getToken(JailBreakLangParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.SUB)
            else:
                return self.getToken(JailBreakLangParser.SUB, i)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = JailBreakLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.term()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42 or _la==43:
                self.state = 174
                _la = self._input.LA(1)
                if not(_la==42 or _la==43):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 175
                self.term()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.FactorContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.FactorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.MUL)
            else:
                return self.getToken(JailBreakLangParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.DIV)
            else:
                return self.getToken(JailBreakLangParser.DIV, i)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = JailBreakLangParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.factor()
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40 or _la==41:
                self.state = 182
                _la = self._input.LA(1)
                if not(_la==40 or _la==41):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 183
                self.factor()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JailBreakLangParser.ID, 0)

        def INT(self):
            return self.getToken(JailBreakLangParser.INT, 0)

        def LPAREN(self):
            return self.getToken(JailBreakLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(JailBreakLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(JailBreakLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = JailBreakLangParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_factor)
        try:
            self.state = 195
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.match(JailBreakLangParser.ID)
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.match(JailBreakLangParser.INT)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 191
                self.match(JailBreakLangParser.LPAREN)
                self.state = 192
                self.expr()
                self.state = 193
                self.match(JailBreakLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(JailBreakLangParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(JailBreakLangParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(JailBreakLangParser.RPAREN, 0)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.ExpressionsContext,i)


        def ID(self):
            return self.getToken(JailBreakLangParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(JailBreakLangParser.ExprContext,0)


        def use_fun(self):
            return self.getTypedRuleContext(JailBreakLangParser.Use_funContext,0)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_commands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommands" ):
                listener.enterCommands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommands" ):
                listener.exitCommands(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommands" ):
                return visitor.visitCommands(self)
            else:
                return visitor.visitChildren(self)




    def commands(self):

        localctx = JailBreakLangParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_commands)
        self._la = 0 # Token type
        try:
            self.state = 249
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                self.match(JailBreakLangParser.T__15)
                self.state = 198
                self.match(JailBreakLangParser.LPAREN)
                self.state = 199
                self.condition()
                self.state = 200
                self.match(JailBreakLangParser.RPAREN)
                self.state = 201
                self.match(JailBreakLangParser.T__7)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184381394162) != 0):
                    self.state = 202
                    self.expressions()
                    self.state = 207
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
